--- a/core/Katchly.csproj
+++ b/core/Katchly.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
+    <PackageReference Include="NPOI" Version="2.7.1" />
   </ItemGroup>
 
 </Project>
